--- a/exemple.html
+++ b/exemple.html
@@ -3,6 +3,8 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <body>
     <h2> bonjour, c'est un bon exemple </h2>
+    <input type="text" id="nom" placeholder="saisir votre nom" />
+    <input type="text" id="prenom" placeholder="saisir votre prenom" />
     <div class="myDiv">
       <p>ajout d'un div</p>
     </div>
